Avoid text selection on ios

--- a/src/main.less
+++ b/src/main.less
@@ -189,6 +189,10 @@ h1 {
   max-width: 80pt;
   width: 100%;
   padding: 0px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .letter {
